refactor: transform findByOrg to findIdsByOrg in ApplicationService